wallet_core/error_category/error_category_derive/tests/derive_error_category/fail_on_invalid_category.stderr
error: expected any of ["expected", "critical", "pd", "defer", "unexpected"], got "invalid"
 --> tests/derive_error_category/fail_on_invalid_category.rs:5:16
  |
5 |     #[category(invalid)]
  |                ^^^^^^^
